--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.card {
+  width: 80%;
+  margin: 0 auto;
+  margin-bottom: 1.5rem;
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+  padding : 1rem;
+}
+
+.card button {
+  width: 60%;
+  margin: 0 auto;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+}
